platforms/advertising/deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopee-advertising
  labels:
    app: shopee-advertising
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: grpc
  selector:
    app: shopee-advertising
